<resources>
    <string name="app_name">Calculator App</string>
    <string name="name">Name:</string>
    <string name="number_2">Number 1:</string>
    <string name="number_1">Number 2:</string>
    <string name="add">Add</string>
    <string name="display">Display</string>
    <string name="clear">Clear</string>
    <string name="your_name">Name:</string>
    <string name="n_a">n/a</string>
    <string name="sum">Sum:</string>
    <string name="_0">n/a</string>
    <string name="back">Back</string>
</resources>